change font ggbtrans key

--- a/common-jre/src/nonfree/resources/org/geogebra/common/jre/properties/menu_ja.properties
+++ b/common-jre/src/nonfree/resources/org/geogebra/common/jre/properties/menu_ja.properties
@@ -635,6 +635,7 @@ FunctionNVar=\u95a2\u6570
 Functionality=\u6a5f\u80fd
 GUIFontSize=\u30e1\u30cb\u30e5\u30fc\u306e\u30d5\u30a9\u30f3\u30c8\u30b5\u30a4\u30ba
 General=\u4e00\u822c
+General.Font=\u30d5\u30a9\u30f3\u30c8
 GeneralTools=\u4e00\u822c\u30c4\u30fc\u30eb
 GenerallyTrue=(\u4e00\u822c\u306b\u6b63\u3057\u3044)
 GenerallyTrueAcondB=" %1 " \u306a\u3089\u3070 " %0 " \u306f\u4e00\u822c\u306b\u6b63\u3057\u3044
